# Just-LTX-Trainer

./: .gitignore  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
.github/workflows/: ci.yml  release.yml
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: caption.rs  dataset_build.rs  dataset_upload.rs  http.rs  init.rs  keys.rs  lib.rs  local_setup.rs  main.rs  notify.rs  nvidia.rs  projects.rs  servers.rs  shell.rs  ssh.rs  ssh_key.rs  tmux_task.rs  training.rs  transfer.rs
src/components/: AutoCaptionBlock.tsx  BuildProgress.tsx  CreateServer.tsx  GpuStat.tsx  LtxInitProgress.tsx  Modal.tsx  Sidebar.tsx  VideoPromptList.tsx  XTerm.tsx  ui.tsx
src/i18n/: en.json  index.ts  ru.json
src/lib/: pods.ts  progress.ts  projects.ts  tasks.tsx
src/views/: Datasets.tsx  ServerDetail.tsx  Servers.tsx  Settings.tsx  Training.tsx
src/views/datasets/: PrepTab.tsx  UploadTab.tsx
src/views/training/: DownloadCheckpointModal.tsx  TrainingActive.tsx  ValidationBlock.tsx
